--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		</div>
 		
 		<div>
-			<a href="https://youtu.be/dQw4w9WgXcQ" class="NAVIGATION_BUTTON"> <img src="Media/ICONS/COSTUMES.png" style="width: 100%;"> </img> </a>
-			<a href="https://youtu.be/dQw4w9WgXcQ" class="NAVIGATION_BUTTON"> <img src="Media/ICONS/LOCATIONS.png" style="width: 100%;"> </img> </a>
+			<a href="https://minionrushencyclopedia.github.io/home/" class="NAVIGATION_BUTTON"> <img src="Media/ICONS/COSTUMES.png" style="width: 100%;"> </img> </a>
+			<a href="https://minionrushencyclopedia.github.io/home/" class="NAVIGATION_BUTTON"> <img src="Media/ICONS/LOCATIONS.png" style="width: 100%;"> </img> </a>
 		</div>
 		
 		<footer>
