--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 		</div>
 		
 		<div>
-			<a href="https://minionrushencyclopedia.github.io/home/" class="NAVIGATION_BUTTON"> <img src="Media/ICONS/COSTUMES.png" style="width: 100%;"> </img> </a>
-			<a href="https://minionrushencyclopedia.github.io/home/" class="NAVIGATION_BUTTON"> <img src="Media/ICONS/LOCATIONS.png" style="width: 100%;"> </img> </a>
+			<a href="https://youtu.be/dQw4w9WgXcQ" class="NAVIGATION_BUTTON"> <img src="Media/ICONS/COSTUMES.png" style="width: 100%;"> </img> </a>
+			<a href="https://youtu.be/dQw4w9WgXcQ" class="NAVIGATION_BUTTON"> <img src="Media/ICONS/LOCATIONS.png" style="width: 100%;"> </img> </a>
 		</div>
 		
 		<footer>
 			<p>© 2021 Minion Rush Encyclopedia</p>
 			<p>
-				<a href="https://minionrushencyclopedia.github.io/home/" rel="noopener noreferrer" style="font-size: 12px;" class="hyperlink">Home</a>
-				<a href="https://minionrushencyclopedia.github.io/table-of-contents/" rel="noopener noreferrer" style="font-size: 12px;" class="hyperlink">Table of Contents</a>
-				<a href="https://minionrushencyclopedia.github.io/about-us/" rel="noopener noreferrer" style="font-size: 12px;" class="hyperlink">About Us</a>
+				<a href="https://minionrushencyclopedia.github.io/home/" rel="noopener noreferrer" style="font-size: 12px; line-height: 30px;" class="hyperlink">Home</a> <br>
+				<a href="https://minionrushencyclopedia.github.io/table-of-contents/" rel="noopener noreferrer" style="font-size: 12px; line-height: 30px;" class="hyperlink">Table of Contents</a> <br>
+				<a href="https://minionrushencyclopedia.github.io/about-us/" rel="noopener noreferrer" style="font-size: 12px; line-height: 30px;" class="hyperlink">About Us</a> <br>
 			</p>
 		</footer>
 	</body>
